gcc/testsuite/rust/compile/break-rust2.rs
fn main() {
    break (rust);
    // { dg-error "cannot find value .rust. in this scope" "" { target *-*-* } .-1 }
}
